# melody.app

./: .gitignore  README.md  nginx.conf  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
melody/app/: build.py  index.html  package.json  tailwind.config.js  vite.config.ts
melody/app/src/: App.vue  app.ts  authorization.ts  checks.ts  constants.ts  enums.ts  errors.ts  i18n.ts  images.ts  keys.ts  main.ts  messages.ts  pinia.ts  router.ts  scopes.ts  setup.ts  style.css  toast.ts  utils.ts
melody/app/src/api/: authorization.ts  client.ts  codes.ts  constants.ts  enums.ts  iters.ts  typing.ts
melody/app/src/components/: AppLayout.vue  AuthorizeForm.vue  BaseHead.vue  ForgotForm.vue  LoginForm.vue  NavigationControls.vue  PlayerControls.vue  RegisterForm.vue  ResetForm.vue  SettingsForm.vue  SideBar.vue  SmallMenu.vue  VerificationForm.vue  WindowControls.vue
melody/app/src/forms/: forgot.ts  login.ts  register.ts  reset.ts  verification.ts
melody/app/src/models/: base.ts  entity.ts  named.ts  playlist.ts  tokens.ts  (+2 more)
melody/app/tauri/: Cargo.toml  tauri.conf.json
melody/app/tauri/icons/: icon.icns
melody/app/tauri/src/: main.rs
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  Tauri.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: authorization.ts  client.ts  constants.ts  enums.ts  errors.ts  ticked.ts
src/api/data/: forgot.ts  login.ts  reset.ts  tokens.ts  userSettings.ts
src/api/models/: client.ts  code.ts  entity.ts  error.ts  simple.ts  tracked.ts  user.ts
src/routes/: +page.svelte
(+45 files in other folders)
